tests/NormalTests/paczka1/fuzzy1/52745043.err
Error in line 5: 6ZERC S461 65,4
Error in line 14: WmTsB2Ulz1S S461 23,7
Error in line 25: o0KS S918 10,9
Error in line 36: S461 S461 23,70
Error in line 38: 6ZERC S461 9,0
